--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,77 @@
-theme: jekyll-theme-leap-day
-plugins:
-  - jekyll-seo-tag
-google_analytics: UA-98721919-6
+title: ES Examples
+email: me@cinhtau.net
+author: Vinh Nguyen
+description: > # this means to ignore newlines until "baseurl:"
+  A collection of notes and examples for Elasticsearch REST APIs
+
+# DO NOT CHANGE THE LINE OF THIS FILE without editing .circleci/circle_urls.sh
+baseurl: "/elasticsearch-api-examples" # the subpath of your site, e.g. /blog
+
+# This is mostly for testing
+url: "https://cinhtau.github.io" # the base hostname & protocol for your site
+
+# Social (First three Required)
+repo: "https://github.com/cinhtau/elasticsearch-api-examples"
+github_user: "cinhtau"
+github_repo: "elasticsearch-api-examples"
+
+# Optional
+twitter: cinhtau
+linkedin: cinhtau
+dockerhub: cinhtau
+
+# Should there be feedback buttons at the bottom of pages?
+feedback: true
+
+# Link to a privacy policy in footer, uncomment and define if wanted
+# privacy: https://domain.com/privacy
+
+google-analytics: UA-98721919-6
+# Image and (square) dimension for logo (don't start with /)
+# If commented, will use material hat theme
+# logo: "assets/img/logo/SRCC-square-red.png"
+logo_pixels: 34
+color: "#30638e"
+# color: "#8c1515" # primary color for header, buttons
+
+# Build settings
+markdown: kramdown
+
+# If you add tags to pages, define this variable to link them to some external search
+# If you want to link to tags locally on the site, leave this commented out
+# tag_search_endpoint: https://ask.cyberinfrastructure.org/search?q=
+tag_color: primary # danger, success, warning, primary, info, secondary
+
+accentColor: red # purple, green, etc.
+themeColor: red # purple, green, blue, orange, purple, grey
+fixedNav: 'true' # true or false
+
+permalink: /:year/:title/
+markdown: kramdown
+exclude: [_site, CHANGELOG.md, LICENSE, README.md, vendor]
+
+# Collections
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path
+
+# Defaults
+defaults:
+  - scope:
+      path: "_docs"
+      type: "docs"
+    values:
+      layout: page
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+  -
+    scope:
+      path: "posts"
+      type: "posts"
+    values:
+      layout: "post"
